force-app/main/default/objects/Product_Holding_Unmasked__mdt/Product_Holding_Unmasked__mdt.object-meta.xml
<CustomObject>
    <description>Set up ProductHolding Balance</description>
    <label>Product Holding Unmasked</label>
    <pluralLabel>Product Holding Unmaskeds</pluralLabel>
</CustomObject>