force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_CarDownAmt__c.field-meta.xml
<CustomField>
    <fullName>AL_CarDownAmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL_CarDownAmt</label>
    <type>Checkbox</type>
</CustomField>