force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_CarpriceAmt__c.field-meta.xml
<CustomField>
    <fullName>AL_CarpriceAmt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL_CarpriceAmt</label>
    <type>Checkbox</type>
</CustomField>