force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_FinancialAmount__c.field-meta.xml
<CustomField>
    <fullName>AL_FinancialAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL_FinancialAmount</label>
    <type>Checkbox</type>
</CustomField>