force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_HpAmount__c.field-meta.xml
<CustomField>
    <fullName>AL_HpAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ALHpAmount(Detail)</description>
    <label>AL_HpAmount</label>
    <type>Checkbox</type>
</CustomField>