force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_InstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>AL_InstallmentAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>InstallmentAmount (detail)</description>
    <label>AL_InstallmentAmount</label>
    <type>Checkbox</type>
</CustomField>