force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_OutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>AL_OutstandingAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OutstandingAmount (detail)</description>
    <label>AL_OutstandingAmount</label>
    <type>Checkbox</type>
</CustomField>