force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_OverdueAmount__c.field-meta.xml
<CustomField>
    <fullName>AL_OverdueAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OverdueAmount (detail)</description>
    <label>AL_OverdueAmount</label>
    <type>Checkbox</type>
</CustomField>