force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/AL_PenaltyAmount__c.field-meta.xml
<CustomField>
    <fullName>AL_PenaltyAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL_PenaltyAmount</label>
    <type>Checkbox</type>
</CustomField>