force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/ALHpAmount__c.field-meta.xml
<CustomField>
    <fullName>ALHpAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALHpAmount</label>
    <type>Checkbox</type>
</CustomField>