force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/ALInstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>ALInstallmentAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALInstallmentAmount</label>
    <type>Checkbox</type>
</CustomField>