force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/ALOutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>ALOutstandingAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALOutstandingAmount</label>
    <type>Checkbox</type>
</CustomField>