force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/ALOverdueAmount__c.field-meta.xml
<CustomField>
    <fullName>ALOverdueAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALOverdueAmount</label>
    <type>Checkbox</type>
</CustomField>