force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Credit_CreditLine__c.field-meta.xml
<CustomField>
    <fullName>Credit_CreditLine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit Card Credit Line(Detail)</description>
    <label>Credit_CreditLine</label>
    <type>Checkbox</type>
</CustomField>