force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit Card Limit(Detail)</description>
    <label>Credit_Limit</label>
    <type>Checkbox</type>
</CustomField>