force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Credit_OutStanding__c.field-meta.xml
<CustomField>
    <fullName>Credit_OutStanding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Credit Card Outstanding (Detail)</description>
    <label>Credit_OutStanding</label>
    <type>Checkbox</type>
</CustomField>