force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/CreditCreditLine__c.field-meta.xml
<CustomField>
    <fullName>CreditCreditLine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreditCreditLine</label>
    <type>Checkbox</type>
</CustomField>