force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreditLimit</label>
    <type>Checkbox</type>
</CustomField>