force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/CreditOutStanding__c.field-meta.xml
<CustomField>
    <fullName>CreditOutStanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CreditOutStanding</label>
    <type>Checkbox</type>
</CustomField>