force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Deposit_AvgOutstanding__c.field-meta.xml
<CustomField>
    <fullName>Deposit_AvgOutstanding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deposit AvgOutstanding (Detail)</description>
    <label>Deposit_AvgOutstanding</label>
    <type>Checkbox</type>
</CustomField>