force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Deposit_LedgerBalance__c.field-meta.xml
<CustomField>
    <fullName>Deposit_LedgerBalance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deposit LedgerBalance (Detail)</description>
    <label>Deposit_LedgerBalance</label>
    <type>Checkbox</type>
</CustomField>