force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Deposit_OutStanding__c.field-meta.xml
<CustomField>
    <fullName>Deposit_OutStanding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deposti OutStanding (Detail)</description>
    <label>Deposit_OutStanding</label>
    <type>Checkbox</type>
</CustomField>