force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/DepositAvgOutstanding__c.field-meta.xml
<CustomField>
    <fullName>DepositAvgOutstanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DepositAvgOutstanding</label>
    <type>Checkbox</type>
</CustomField>