force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/DepositLedgerBalance__c.field-meta.xml
<CustomField>
    <fullName>DepositLedgerBalance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DepositLedgerBalance</label>
    <type>Checkbox</type>
</CustomField>