force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/DepositOutStanding__c.field-meta.xml
<CustomField>
    <fullName>DepositOutStanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DepositOutStanding</label>
    <type>Checkbox</type>
</CustomField>