force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Loan_Limit__c.field-meta.xml
<CustomField>
    <fullName>Loan_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>loan limit(detail)</description>
    <label>Loan_Limit</label>
    <type>Checkbox</type>
</CustomField>