force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Loan_OutStadning__c.field-meta.xml
<CustomField>
    <fullName>Loan_OutStadning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Loan OutStadning(Detail)</description>
    <label>Loan_OutStadning</label>
    <type>Checkbox</type>
</CustomField>