force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/LoanLimit__c.field-meta.xml
<CustomField>
    <fullName>LoanLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoanLimit</label>
    <type>Checkbox</type>
</CustomField>