force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/LoanOutStadning__c.field-meta.xml
<CustomField>
    <fullName>LoanOutStadning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoanOutStadning</label>
    <type>Checkbox</type>
</CustomField>