force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>