force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/SummaryLimit__c.field-meta.xml
<CustomField>
    <fullName>SummaryLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SummaryLimit</label>
    <type>Checkbox</type>
</CustomField>