force-app/main/default/objects/Product_Holding_Unmasked__mdt/fields/SummaryOutStanding__c.field-meta.xml
<CustomField>
    <fullName>SummaryOutStanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SummaryOutStanding</label>
    <type>Checkbox</type>
</CustomField>