force-app/main/default/objects/Product_Holding_Unmasked__mdt/listViews/All_uan.listView-meta.xml
<ListView>
    <fullName>All_uan</fullName>
    <columns>Profile_Name__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All_uan</label>
    <language>en_US</language>
</ListView>